--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>groupId</groupId>
     <artifactId>GotchaForceUtilities</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <repositories>
+        <repository>
+          <id>jitpack.io</id>
+          <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <build>
         <sourceDirectory>src</sourceDirectory>
         <plugins>
@@ -36,7 +44,13 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.8</version>
+            <version>2.10.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.goxr3plus</groupId>
+            <artifactId>FX-BorderlessScene</artifactId>
+            <version>4.4.0</version>
         </dependency>
 
 
