Moved from file to inputstream

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,15 @@
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>resources</directory>
+                <targetPath>resources</targetPath>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
         <sourceDirectory>src/</sourceDirectory>
         <plugins>
             <plugin>
