--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,15 @@
     </properties>
 
     <build>
+        <sourceDirectory>src/</sourceDirectory>
         <resources>
             <resource>
-                <directory>resources</directory>
-                <targetPath>resources</targetPath>
+                <directory>src/resources</directory>
                 <includes>
                     <include>**/*</include>
                 </includes>
             </resource>
         </resources>
-        <sourceDirectory>src/</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
